c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/other_features/postfix_decr_struct_arrow.c
// Can't apply ++/-- to any structures, including nested ones accessed thru ->
struct inner {int i;};
struct outer{struct inner s;};

int main(void) {
    struct outer my_struct = {{1}};
    struct outer *ptr = &my_struct;
    ptr->s--;
    return 0;
}